force-app/main/default/objects/Application_User_Account__c/Application_User_Account__c.object-meta.xml
<CustomObject>
    <label>Application User Account</label>
    <nameField>
        <displayFormat>AUA-{00000}</displayFormat>
        <label>Application User Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application User Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>