force-app/main/default/objects/Application_User_Account__c/fields/Chronarpay_User__c.field-meta.xml
<CustomField>
    <fullName>Chronarpay_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chronarpay User</label>
    <referenceTo>Chronarpay_User__c</referenceTo>
    <relationshipLabel>Application User Accounts</relationshipLabel>
    <relationshipName>Application_User_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>