force-app/main/default/objects/Application_User_Account__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Application User Accounts</relationshipLabel>
    <relationshipName>Application_User_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>