force-app/main/default/objects/Application_User_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Is_Primary__c</columns>
    <columns>User__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>